Fixed flickering behavior on jstree floating toolbar

--- a/src/scss/components/_tree.scss
+++ b/src/scss/components/_tree.scss
@@ -40,9 +40,14 @@ li[data-root].jstree-node {
     align-items: center;
     position: absolute;
     right: 0;
+    //background: var(--tpe-panel-content-bg);
 
     [data-action] {
       padding: 0 4px;
     }
   }
+}
+
+.jstree-container-ul {
+    max-width: 100%;
 }
