--- a/src/scss/layout/_sidebar.scss
+++ b/src/scss/layout/_sidebar.scss
@@ -1,5 +1,5 @@
 .tpe-sidebar {
-    flex: 0 0 200px;
+    flex: 0 0 270px;
     border-right: var(--tpe-panel-border);
     background: var(--tpe-panel-content-bg);
     overflow-x: hidden;
